tests/toy/neg/001092_mutation.toylang
program a = { if a then sleep while else sleep; } .
